# RobotVisionTracing

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/task_controller/: CMakeLists.txt  node_controller.py  package.xml
src/task_controller/common_modules/motion/: motion_control.py
src/task_controller/common_modules/object_detection/: line_detection.py
src/task_controller/launch/: system_controller.launch
src/task_controller/tasks/: task_line_following.py  task_trajectory.py
