<?xml version="1.0"?>
<package format="2">
  <name>task_controller</name>
  <version>0.0.1</version>
  <description>Task Controller Package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Common ROS dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- Additional dependencies as needed -->
  <exec_depend>roslaunch</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>